--- a/cancha-futbol/package.json
+++ b/cancha-futbol/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^4.5.0",
     "core-js": "^3.8.3",
     "pinia": "^2.1.3",
     "vite": "^4.3.9",
