--- a/cancha-futbol/package.json
+++ b/cancha-futbol/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.3",
     "vite": "^4.3.9",
     "vue": "^3.2.13",
@@ -21,7 +22,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.1"
   },
   "eslintConfig": {
     "root": true,
