--- a/cancha-futbol/package.json
+++ b/cancha-futbol/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "pinia": "^2.1.3",
+    "sass": "^1.63.5",
+    "sass-loader": "^13.3.2",
     "vite": "^4.3.9",
     "vue": "^3.2.13",
     "vue-router": "^4.2.2"
